BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_SelectedProviderGroup__c.object
<CustomObject>
    <description>This object holds all the provider groups selections made by a user upon logging in. The latest one among the selected provider groups for a specific user, would always fetch the one he is part of during the current session</description>
    <fields>
        <fullName>HSvc_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProviderGroup__c</fullName>
        <label>Provider Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Selected_Provider_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Which_Interface__c</fullName>
        <description>Holds which interface has created the record.</description>
        <label>Which Interface?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Login Flow</fullName>
                </value>
                <value>
                    <fullName>Switch Provider Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Selected Provider Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProviderGroup__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPG-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selected Provider Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>